# vibecoded-diktovani

./: .gitignore  Cargo.toml  project-explained.html  release.sh
.github/actions/import-macos-cert/: action.yml
.github/workflows/: build.yml  release.yml
assets/AppIcon.appiconset/: Contents.json
examples/: test_progress.rs
src/: bubble.rs  core.rs  hotkey.rs  icons.rs  languages.rs  main.rs  settings.rs  ui.rs  whisper.rs
