[package]
name = "whispering-mvp"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16.0"
eframe = { version = "0.33.0", default-features = true }
env_logger = "0.11.8"
hound = "3.5.1"
rubato = "0.15.0"
tempfile = "3.8.1"
thiserror = "2.0.12"
transcribe-rs = { version = "0.2.9", features = ["whisper"] }
