[package]
name = "whispering-mvp"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
accessibility-sys = "0.2.0"
cpal = "0.16.0"
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"
enigo = "0.6.1"
env_logger = "0.11.8"
hound = "3.5.1"
image = { version = "0.25.5", default-features = false, features = ["png"] }
rubato = "0.15.0"
tempfile = "3.8.1"
thiserror = "2.0.12"
tray-icon = "0.22.0"
transcribe-rs = { version = "0.2.9", features = ["whisper"] }
ureq = "2.12.1"
winit = "0.30.12"

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
cocoa = "0.26.1"
objc = "0.2.7"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSButton", "NSImage", "NSStatusBarButton", "NSStatusItem"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSString"] }
